fixes spacing issue on welcome snippet for 760 and under views. Bug 740026

--- a/media/css/base-768px.css
+++ b/media/css/base-768px.css
@@ -14,7 +14,7 @@
         background-image: none;
         width: auto;
         text-align: initial;
-        padding: initial;
+        padding: 0px;
     }
 
     #profile-info {
